<resources>
    <string name="app_name">Moscow Wi-Fi autologin</string>
    <string name="report">Send report</string>
    <string name="report_email_address" translatable="false">mosmetro@thedrhax.pw</string>
    <string name="report_email_subject" formatted="false">Version %s</string>
    <string name="report_choose_client">Choose email client…</string>
    <string name="retry">Try again</string>
    <string name="connect">Connect</string>
    <string name="in_background">In background</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="install">Install</string>
    <string name="ignore_short">Ignore</string>
    <string name="ignore">Ignore</string>
    <string name="later">Later</string>
    <string name="error" formatted="false">Error: %s</string>
    <string name="not">not</string>
    <string name="try_out_of" formatted="false">try %d out of %d</string>
    <string name="version" formatted="false">Application version: %s</string>
    <string name="show_debug_log">Show verbose messages</string>
    <string name="clipboard_copy">Text copied to clipboard</string>
    <string name="screen_clear">Clear screen</string>
    <string name="about">About</string>
    <string name="pref_category_main">Main preferences</string>
    <string name="pref_category_connection">Connection preferences</string>
    <string name="pref_category_connection_summary">Automatic background connection preferences</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_notifications_summary">Enable/disable various notifications</string>
    <string name="pref_category_updater">Updates</string>
    <string name="pref_category_contributors">Acknowledgments</string>
    <string name="pref_autoconnect">Automatic authentication</string>
    <string name="pref_autoconnect_summary">Login automatically when connected to supported Wi-Fi networks</string>
    <string name="pref_wifi_reconnect">Reconnect to Wi-Fi</string>
    <string name="pref_wifi_reconnect_summary">
        Try to reconnect to Wi-Fi network automatically when Wi-Fi signal is lost or connection is reset.
    </string>
    <string name="pref_wifi_bind">Bind process to the network</string>
    <string name="pref_wifi_bind_summary">Prevents leaking traffic to mobile network but may cause problems with VPN.</string>
    <string name="pref_internet_check">Connection monitoring</string>
    <string name="pref_internet_check_summary">Check Internet connection every 10 seconds and restart connection on error.</string>
    <string name="pref_notify_fail">Connection failure</string>
    <string name="pref_notify_fail_summary">Notify on failure</string>
    <string name="pref_notify_alternative">Alternative icons</string>
    <string name="pref_notify_alternative_summary">
        Use white icons on Android older than 5.0 and colored icons on Android 5.0 and newer (not always supported).
    </string>
    <string name="pref_notify_success_lock">Locked notification</string>
    <string name="pref_notify_success_lock_summary">
        Lock successful connection notification (notification will remain while Wi-Fi is connected)
    </string>
    <string name="pref_notify_news">Developer news</string>
    <string name="pref_notify_news_summary">I will be able to inform you in case of problems with application.</string>
    <string name="pref_retry_delay">Delay between retries</string>
    <string name="pref_retry_delay_summary">Number of seconds between retries (default: 5)</string>
    <string name="pref_retry_count">Retry count</string>
    <string name="pref_retry_count_summary">Number of retries on error (default: 3)</string>
    <string name="pref_ip_wait">Waiting for IP address</string>
    <string name="pref_ip_wait_summary">
        Number of seconds to wait for IP address assignment.
        If 0 is set, application will wait until device disconnects from the network (default: 30).
    </string>
    <string name="pref_updater_enabled">Check automatically</string>
    <string name="pref_updater_enabled_summary">Check for updates on application start</string>
    <string name="pref_updater_check">Check for updates</string>
    <string name="pref_updater_check_summary">Check for new application version on developer website</string>
    <string name="pref_updater_branch">Update branch</string>
    <string name="pref_updater_branch_summary">
        Choose branch from which application will receive updates (default: play)
    </string>
    <string name="update_available">Update is available</string>
    <string name="update_not_available">No updates available</string>
    <string name="update_not_available_message">New versions will be displayed here when published.</string>
    <string name="developer">Developer</string>
    <string name="developer_info">Dmitry Karikh (mosmetro@thedrhax.pw)</string>
    <string name="developer_site">Developer website</string>
    <string name="developer_site_link" translatable="false">https://thedrhax.pw</string>
    <string name="developer_github_repo">GitHub repository</string>
    <string name="developer_github_repo_summary" translatable="false">TheDrHax/mosmetro-android</string>
    <string name="developer_github_repo_link" translatable="false">https://github.com/TheDrHax/mosmetro-android</string>
    <string name="developer_google_play">Google Play application webpage</string>
    <string name="developer_google_play_link" translatable="false">https://play.google.com/store/apps/details?id=pw.thedrhax.mosmetro</string>
    <string name="developer_vkontakte">VK community</string>
    <string name="developer_vkontakte_summary" translatable="false">vk.com/wifi_v_metro</string>
    <string name="developer_vkontakte_link" translatable="false">https://vk.com/wifi_v_metro</string>
    <string name="manual_connection">Manual connection</string>
    <string name="manual_connection_summary">You can connect here if this application is ignoring Wi-Fi state</string>
    <string name="manual_connection_shortcut">Create shortcut</string>
    <string name="shortcut_background">Connect in the background</string>
    <string name="shortcut_force">Even if network name is unknown</string>
    <string name="auth_connecting" formatted="false">Connecting to %s</string>
    <string name="algorithm_name" formatted="false">Algorithm name: %s</string>
    <string name="auth_waiting">Waiting…</string>
    <string name="auth_checking_connection">Checking Internet connection</string>
    <string name="auth_already_connected">Already connected</string>
    <string name="auth_redirect">Getting redirection</string>
    <string name="auth_captcha_result">CAPTCHA entered: %s</string>
    <string name="auth_captcha_dialog">Please solve the CAPTCHA</string>
    <string name="auth_captcha_dialog_summary">
        MaximaTelecom asks to enter this code from time to time to login.
        Here you can enter it without watching ads.
        \nClick on the image to update it.
    </string>
    <string name="auth_captcha_requested">CAPTCHA requested</string>
    <string name="auth_captcha_bypass_success">CAPTCHA disabled. Congratulations! :)</string>
    <string name="auth_captcha_bypass_fail">Unable to bypass CAPTCHA, proceeding…</string>
    <string name="auth_auth_page">Getting login page</string>
    <string name="auth_auth_form">Sending login form</string>
    <string name="auth_connected">Connection established :3</string>
    <string name="auth_request">Sending request</string>
    <string name="auth_error_connection">Internet connection is not available</string>
    <string name="auth_error_redirect">redirect is not received</string>
    <string name="auth_error_auth_page">login page is not received</string>
    <string name="auth_error_not_registered">
        device is not registered in the network\n Please, open http://wi-fi.ru
        and register with your phone number to get SMS with further instructions.
        It is only required the first time, after that application will work normally.\n
        Disclaimer: This application developer has nothing to do with registration.
        Registration is required by MaximaTelecom ISP (http://maximatelecom.ru).
    </string>
    <string name="auth_error_auth_form">login form not found</string>
    <string name="auth_error_server">server does not respond or responds with error</string>
    <string name="auth_error_provider">unable to identify the provider</string>
    <string name="auth_error_provider_unsupported" formatted="false">
        provider %s is not supported by application yet. Maybe the network is maintained by two providers
        one of which is not supported yet. We apologize for inconvenience.
    </string>
    <string name="auth_error_captcha">CAPTCHA required</string>
    <string name="auth_error_captcha_image">unable to find the image</string>
    <string name="notification_success">Successfully connected</string>
    <string name="notification_success_log">Click for details</string>
    <string name="notification_not_registered">Device is not registered</string>
    <string name="notification_not_registered_register">Click to proceed with registration</string>
    <string name="notification_error">Unable to connect</string>
    <string name="notification_error_log">Click to get details or retry</string>
    <string name="notification_unsupported">Network is not supported</string>
    <string name="notification_progress_waiting">Waiting…</string>
    <string name="notification_progress_connecting">Connecting…</string>
    <string name="notification_captcha">CAPTCHA is required</string>
    <string name="notification_captcha_summary">Click here to pass CAPTCHA manually</string>
    <string name="ip_wait">Waiting for IP address…</string>
    <string name="ip_wait_result" formatted="false">IP address%s assigned within %d seconds</string>
    <string name="contirutor_revertron" translatable="false">Revertron</string>
    <string name="contributor_revertron_summary">Numerous algorithm recommendations</string>
    <string name="contributor_revertron_link" translatable="false">https://github.com/Revertron</string>
    <string name="contrinutor_Mikhail_Kuropatkin_summary">Helped collecting authentication dumps</string>
    <string name="contributor_Mikhail_Kuropatkin" translatable="false">Mikhail Kuropatkin</string>
    <string name="contributor_Mikhail_Kuropatkin_link" translatable="false">https://telegram.me/kuropatkin</string>
    <string name="more_information">More information</string>
    <string name="more_information_summary">Links, communities, contibutors</string>
    <string name="pref_mosmetro_captcha_bypass_backdoor">CAPTCHA bypass (backdoor)</string>
    <string name="pref_mosmetro_captcha_bypass_backdoor_summary">Allow to use the official backdoor to bypass the CAPTCHA. Turn it off in case of random freezes.</string>
    <string name="pref_mosmetro_captcha_bypass_mosmetrov1">CAPTCHA bypass (MosMetroV1)</string>
    <string name="pref_mosmetro_captcha_bypass_mosmetrov1_summary">Allow to use the MosMetroV1 algorithm to bypass the CAPTCHA.</string>
    <string name="pref_mosmetro_captcha_force">Force the CAPTCHA request</string>
    <string name="pref_mosmetro_captcha_force_summary">This option will force the algorithm to think that CAPTCHA is always requested by server.</string>
    <string name="pref_category_advanced">Advanced preferences</string>
    <string name="pref_category_advanced_summary">This category contains useful, yet dangerous preferences. Be careful!</string>
    <string name="captcha">CAPTCHA</string>
    <string name="pref_mosmetro_captcha_collect">Collect solved CAPTCHAs</string>
    <string name="pref_mosmetro_captcha_collect_summary">Allow this app to send manually solved CAPTCHAs to my server.</string>
    <string name="pref_category_statistics">Statistics</string>
</resources>