<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_autoconnect"
        android:title="@string/pref_autoconnect"
        android:summary="@string/pref_autoconnect_summary"
        android:defaultValue="true" />

    <Preference
        android:title="@string/manual_connection"
        android:summary="@string/manual_connection_summary">

        <intent android:action="pw.thedrhax.mosmetro.activities.DebugActivity" />
    </Preference>

    <PreferenceCategory
        android:key="pref_category_main"
        android:title="@string/pref_category_main">

        <Preference
            android:title="@string/pref_category_connection"
            android:summary="@string/pref_category_connection_summary">
            <intent android:action="pw.thedrhax.mosmetro.activities.ConnectionPreferences" />
        </Preference>

        <Preference
            android:title="@string/pref_category_notifications"
            android:summary="@string/pref_category_notifications_summary">
            <intent android:action="pw.thedrhax.mosmetro.activities.NotificationPreferences" />
        </Preference>

        <PreferenceScreen
            android:key="pref_category_advanced"
            android:title="@string/pref_category_advanced"
            android:summary="@string/pref_category_advanced_summary"
            android:shouldDisableView="true">

            <PreferenceCategory android:title="@string/captcha" />

            <CheckBoxPreference
                android:key="pref_mosmetro_captcha_bypass_backdoor"
                android:title="@string/pref_mosmetro_captcha_bypass_backdoor"
                android:summary="@string/pref_mosmetro_captcha_bypass_backdoor_summary"
                android:defaultValue="true" />

            <CheckBoxPreference
                android:key="pref_mosmetro_captcha_bypass_mosmetrov1"
                android:title="@string/pref_mosmetro_captcha_bypass_mosmetrov1"
                android:summary="@string/pref_mosmetro_captcha_bypass_mosmetrov1_summary"
                android:defaultValue="true" />

            <CheckBoxPreference
                android:key="pref_mosmetro_captcha_force"
                android:title="@string/pref_mosmetro_captcha_force"
                android:summary="@string/pref_mosmetro_captcha_force_summary"
                android:defaultValue="false" />

            <PreferenceCategory android:title="@string/pref_category_statistics" />

            <CheckBoxPreference
                android:key="pref_mosmetro_captcha_collect"
                android:title="@string/pref_mosmetro_captcha_collect"
                android:summary="@string/pref_mosmetro_captcha_collect_summary"
                android:defaultValue="true" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_updater">

        <CheckBoxPreference
            android:key="pref_updater_enabled"
            android:title="@string/pref_updater_enabled"
            android:summary="@string/pref_updater_enabled_summary"
            android:defaultValue="true" />

        <Preference
            android:key="pref_updater_check"
            android:title="@string/pref_updater_check"
            android:summary="@string/pref_updater_check_summary" />

        <ListPreference
            android:key="pref_updater_branch"
            android:title="@string/pref_updater_branch"
            android:summary="@string/pref_updater_branch_summary"
            android:defaultValue="play"
            android:enabled="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:key="app_name"
            android:icon="@drawable/ic_launcher"
            android:title="@string/app_name" />

        <Preference
            android:title="@string/more_information"
            android:summary="@string/more_information_summary">
            <intent android:action="pw.thedrhax.mosmetro.activities.AboutActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>